--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.19"
   },
+  "engines": {
+    "node": ">=22.0.0",
+    "npm": ">=10.0.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/node": "^24.0.4",
