chore: api service integration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
       "@pages": ["src/pages"],
 
       "@containers/*": ["src/containers/*"],
-      "@layouts/*": ["src/layouts/*"]
+      "@layouts/*": ["src/layouts/*"],
+      "@api/*": ["src/api/*"]
     }
   }
 }
