--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,7 +13,8 @@
       "@pages": ["src/pages"],
 
       "@containers/*": ["src/containers/*"],
-      "@layouts/*": ["src/layouts/*"]
+      "@layouts/*": ["src/layouts/*"],
+      "@api/*": ["src/api/*"]
     },
 
     /* Bundler mode */
