chore: state management tool integration, zustand

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-
+      "@stores/*": ["src/stores/*"],
       "@pages": ["src/pages"],
-
       "@containers/*": ["src/containers/*"],
       "@layouts/*": ["src/layouts/*"],
       "@api/*": ["src/api/*"]
