--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,7 +14,8 @@
 
       "@containers/*": ["src/containers/*"],
       "@layouts/*": ["src/layouts/*"],
-      "@api/*": ["src/api/*"]
+      "@api/*": ["src/api/*"],
+      "@hooks/*": ["src/hooks/*"]
     },
 
     /* Bundler mode */
